# video-donwloader-scripts

./: .gitignore  README.md  ffmpeg_worker.py  video-downloader.py  video-server.py
app1/: CMakeLists.txt  ffmpegworker.cpp  ffmpegworker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
app2/: CMakeLists.txt  combowithplaceholder.cpp  combowithplaceholder.h  ffmpegdecoder.cpp  ffmpegdecoder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
